--- a/templates/encontro/events.html
+++ b/templates/encontro/events.html
@@ -1,9 +1,9 @@
-<h2 class="fs-4">Encontros Cadastrados</h2>
+<h2 class="fs-4">Eventos Cadastrados para {{ encontro.nome }}</h2>
 <hr />
 <nav class="navbar bg-body-tertiary">
   <div class="container-fluid">
     <a
-      href="/pages{{ url_for('encontro.register') }}"
+      href="/pages{{ url_for('encontro.register_event', _id=encontro.id) }}"
       class="btn btn-primary"
       data-link
       >+ Novo</a
@@ -13,20 +13,22 @@
 <table class="table table-striped table-hover">
   <thead>
     <tr>
-      <th scope="col">#</th>
       <th scope="col">Nome</th>
+      <th scope="col">Tema</th>
+      <th scope="col">Ano</th>
       <th scope="col">Ações</th>
     </tr>
   </thead>
   <tbody>
-    {% for encontro in encontros %}
+    {% for evento in eventos %}
     <tr>
-      <th scope="row">{{ encontro.id }}</th>
-      <td>{{ encontro.nome }}</td>
+      <td>{{ evento.nome }}</td>
+      <td>{{ evento.tema }}</td>
+      <td>{{ evento.ano }}</td>
       <td>
         <a
           class="btn btn-sm icon-link icon-link-hover"
-          href="/pages{{ url_for('encontro.edit', id=encontro.id) }}"
+          href="/pages{{ url_for('encontro.edit', id=evento.id) }}"
           data-link
         >
           <i class="fas fa-pen"></i>
@@ -40,14 +42,13 @@
         </a>
         <a
           class="btn btn-sm icon-link icon-link-hover"
-          href="/pages{{ url_for('encontro.events', _id=encontro.id) }}"
+          href="/pages{{ url_for('encontro.teams') }}"
           data-link
         >
-          <i class="fa-solid fa-person-praying"></i>
+          <i class="fa-solid fa-group-arrows-rotate"></i>
         </a>
       </td>
     </tr>
     {% endfor %}
   </tbody>
 </table>
-
