--- a/templates/encontro/register.html
+++ b/templates/encontro/register.html
@@ -1,34 +1,61 @@
-{% with messages = get_flashed_messages(with_categories=true) %}
-{% if messages %}
-{% include '../components/toasts.html' %}
-{% endif %}
-{% endwith %}
+{% with messages = get_flashed_messages(with_categories=true) %} {% if messages
+%} {% include '../components/toasts.html' %} {% endif %} {% endwith %}
 <h2 class="fs-4">Cadastro de Encontro</h2>
-<hr>
-<form action="{{ url_for('encontro.register') }}{% if form.id.data %}/{{ form.id.data }}{% endif %}" target="/pages{{ url_for('encontro.index') }}" method="post"
-    novalidate>
-    {{ form.csrf_token }}
-    <input type="hidden" name="id" value="{% if form.id.data %}{{ form.id.data }}{% endif %}">
-    <div class="row g-3">
-        <div class="col-md-6">
-            <label for="iptNome" class="form-label">Nome</label>
-            <input type="text" value="{% if form.nome.data %}{{ form.nome.data }}{% endif %}" required
-                name="nome" class="form-control" id="iptNome">
-        </div>        
+<hr />
+<form
+  action="{% if form.id.data %}{{ url_for('encontro.edit', id=form.id.data) }}{% else %}{{ url_for('encontro.register') }}{% endif %}"
+  target="/pages{{ url_for('encontro.index') }}"
+  method="post"
+  novalidate
+>
+  {{ form.csrf_token }}
+  {% if form.id.data %}
+  <input
+    type="hidden"
+    name="id"
+    id="iptId"
+    value="{{ form.id.data }}"
+  />
+  {% endif %}
+  <div class="row g-3">
+    <div class="col-md-6">
+      <label for="iptNome" class="form-label">Nome</label>
+      <input
+        type="text"
+        value="{% if form.nome.data %}{{ form.nome.data }}{% endif %}"        
+        name="nome"
+        class="form-control"
+        id="iptNome"
+      />
     </div>
-    <hr class="my-4">
-    <div class="row g-3">
-        <div class="col-6">
-            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                <a href="/pages{{ url_for('encontro.index') }}" style="width: 100px" class="btn btn-secondary" type="button" data-link>Cancelar</a>
-            </div>
-        </div>
-        <div class="col-6">
-            <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                <button type="submit" style="width: 100px" class="btn btn-dark" type="button">Salvar</button>
-            </div>
-        </div>
+  </div>
+  <hr class="my-4" />
+  <div class="row g-3">
+    <div class="col-6">
+      <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+        <a
+          href="/pages{{ url_for('encontro.index') }}"
+          style="width: 100px"
+          class="btn btn-secondary"
+          type="button"
+          data-link
+          >Cancelar</a
+        >
+      </div>
     </div>
+    <div class="col-6">
+      <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+        <button
+          type="submit"
+          style="width: 100px"
+          class="btn btn-dark"
+          type="button"
+        >
+          Salvar
+        </button>
+      </div>
+    </div>
+  </div>
 </form>
 <script>
   // Example starter JavaScript for disabling form submissions if there are invalid fields
@@ -43,17 +70,19 @@
         validations: [
           { handler: isRequired, message: "Por favor informe o nome" },
         ],
-      },
+      },      
     ];
 
     form.addEventListener("submit", (event) => {
       event.preventDefault();
       event.stopPropagation();
-      form.classList.add("was-validated");
+      event.target.classList.add("was-validated");
+      const itemId = event.target.querySelector("#iptId");
+      const successMsg = itemId ? "Encontro atualizado com sucesso" : "Encontro criado com sucesso";
 
       if (validateForm(formValidations)) {
-        sendFormData(form);
-      }      
+        sendFormData(event.target, successMsg);
+      }
     });
   })();
 </script>
