--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,14 @@
 <div class="d-flex vh-100">
   {% include "components/sidebar.html" %}
   <div class="w-100">
+    <div id="mainToast" style="top: 3.6rem" class="toast align-items-center text-bg-success border-0  position-fixed top-30 start-50 translate-middle-x p-2" role="alert" aria-live="assertive" aria-atomic="true">
+      <div class="d-flex">
+        <div class="toast-body">
+          Hello, world! This is a toast message.
+        </div>
+        <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+      </div>
+    </div>
     {% include "components/navbar.html" %}
     <div id="app" class="dashboard-content px-3 pt-4"></div>
   </div>
