Alterações para edição de eventos.

--- a/templates/encontro/events.html
+++ b/templates/encontro/events.html
@@ -1,4 +1,17 @@
-<h2 class="fs-4">Eventos Cadastrados para {{ encontro.nome }}</h2>
+<div class="d-flex justify-content-between">
+    <h2 class="fs-4">Eventos Cadastrados para {{ encontro.nome }}</h2>
+    <nav style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="#">Home</a></li>
+        <li class="breadcrumb-item active" aria-current="page">
+          <a href="/pages{{ url_for('encontro.index')}}" data-link>Encontros</a>
+        </li>
+        <li class="breadcrumb-item active" aria-current="page">
+          Eventos
+        </li>      
+      </ol>
+    </nav>
+  </div>
 <hr />
 <nav class="navbar bg-body-tertiary">
   <div class="container-fluid">
