--- a/templates/encontro/index.html
+++ b/templates/encontro/index.html
@@ -1,4 +1,14 @@
-<h2 class="fs-4">Encontros Cadastrados</h2>
+<div class="d-flex justify-content-between">
+  <h2 class="fs-4">Encontros Cadastrados</h2>
+  <nav style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="#">Home</a></li>
+      <li class="breadcrumb-item active" aria-current="page">
+        Encontros
+      </li>
+    </ol>
+  </nav>
+</div>
 <hr />
 <nav class="navbar bg-body-tertiary">
   <div class="container-fluid">
