--- a/templates/components/sidebar.html
+++ b/templates/components/sidebar.html
@@ -4,8 +4,11 @@
   </div>
   <ul class="px-2">
     <li class="py-2">
-      <a href="#" class="text-decoration-none px-3 py-2 d-block"
-        ><i class="fa-solid fa-house"></i> Dashboard</a
+      <a
+        href="/pages{{ url_for('casal.index') }}"
+        class="text-decoration-none px-3 py-2 d-block"
+        data-link
+        ><i class="fa fa-list-ol"></i> Casais</a
       >
     </li>
     <li class="py-2">
