--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
   crossorigin="anonymous"
 ></script>
 {% endblock %} {% block main %}
-<div class="d-flex vh-100">
+<div class="d-flex min-vh-100">
   {% include "components/sidebar.html" %}
   <div class="w-100">
     <div
