--- a/app/templates/casal/register.html
+++ b/app/templates/casal/register.html
@@ -168,11 +168,11 @@
     </div>
   </div>
   <hr class="my-4" />
-  <div class="row g-3">
+  <div class="row g-3 mb-3">
     <div class="col-6">
       <div class="d-grid gap-2 d-md-flex justify-content-md-start">
         <a
-          href="/pages{{ url_for('encontro.index') }}"
+          href="/pages{{ url_for('casal.index') }}"
           style="width: 100px"
           class="btn btn-secondary"
           type="button"
