--- a/app/templates/casal/index.html
+++ b/app/templates/casal/index.html
@@ -43,7 +43,7 @@
     </tr>
   </thead>
   <tbody>
-    {% for casal in casais %}
+    {% for casal in page.items %}
     <tr>
       <td>{{ casal.esposo.nome }}</td>
       <td>{{ casal.esposa.nome }}</td>
@@ -77,15 +77,15 @@
 <nav aria-label="Page navigation example">
   <ul class="pagination justify-content-center">
     <li class="page-item">
-      <a class="page-link" href="#" aria-label="Previous">
+      <a class="page-link {% if not page.has_previous %}disabled{% endif %}" href="#" aria-label="Previous">
         <span aria-hidden="true">&laquo;</span>
       </a>
     </li>
-    <li class="page-item"><a class="page-link" href="#">1</a></li>
+    <li class="page-item active"><span class="page-link">1</span></li>
     <li class="page-item"><a class="page-link" href="#">2</a></li>
     <li class="page-item"><a class="page-link" href="#">3</a></li>
     <li class="page-item">
-      <a class="page-link" href="#" aria-label="Next">
+      <a class="page-link {% if not page.has_next %}disabled{% endif %}" href="#" aria-label="Next">
         <span aria-hidden="true">&raquo;</span>
       </a>
     </li>
