--- a/app/templates/casal/index.html
+++ b/app/templates/casal/index.html
@@ -11,7 +11,7 @@
 <nav class="navbar bg-body-tertiary">
   <div class="container-fluid">
     <a
-      href="/pages{{ url_for('casal.register') }}"
+      href="/pages{{ url_for('casal.register', page=page.page, per_page=page.per_page) }}"
       class="btn btn-primary"
       data-link
       >+ Novo</a
@@ -27,6 +27,7 @@
         class="form-control me-2"
         type="search"
         name="filtro"
+        value="{% if filtro %}{{filtro}}{% else %}{{''}}{% endif %}"
         placeholder="Pesquisar"
         aria-label="Search"
       />
@@ -38,7 +39,9 @@
   <thead>
     <tr>
       <th scope="col">Esposo</th>
+      <th scope="col">Telefone</th>
       <th scope="col">Esposa</th>
+      <th scope="col">Telefone</th>
       <th scope="col">Ações</th>
     </tr>
   </thead>
@@ -46,52 +49,67 @@
     {% for casal in page.items %}
     <tr>
       <td>{{ casal.esposo.nome }}</td>
+      <td>{{ casal.esposo.telefone }}</td>
       <td>{{ casal.esposa.nome }}</td>
+      <td>{{ casal.esposa.telefone }}</td>
       <td>
         <a
           class="btn btn-sm icon-link icon-link-hover"
-          href="/pages{{ url_for('encontro.edit', id=1) }}"
+          href="/pages{{ url_for('casal.editar', id=casal.id, page=page.page, per_page=page.per_page) }}"
           data-link
         >
           <i class="fas fa-pen"></i>
-        </a>
-        <a
-          class="btn btn-sm icon-link icon-link-hover"
-          href="/pages{{ url_for('encontro.teams') }}"
-          data-link
-        >
-          <i class="fas fa-people-group"></i>
-        </a>
-        <a
-          class="btn btn-sm icon-link icon-link-hover"
-          href="/pages{{ url_for('encontro.events', _id=1) }}"
-          data-link
-        >
-          <i class="fa-solid fa-person-praying"></i>
-        </a>
+        </a>        
       </td>
     </tr>
     {% endfor %}
   </tbody>
 </table>
-<nav aria-label="Page navigation example">
+<nav aria-label="Navegação da página">
   <ul class="pagination justify-content-center">
     <li class="page-item">
-      <a class="page-link {% if not page.has_previous %}disabled{% endif %}" href="#" aria-label="Previous">
+      {% if page.has_prev %}
+      <a
+        class="page-link"
+        href="/pages{{ url_for('casal.index', page=page.page-1, per_page=10)}}"
+        aria-label="Previous"
+        data-link
+      >
         <span aria-hidden="true">&laquo;</span>
       </a>
+      {% else %}
+      <a class="page-link disabled" href="#" aria-label="Previous">
+        <span aria-hidden="true">&laquo;</span>
+      </a>
+      {% endif %}
     </li>
-    {% for i in range(page.pages) %}
-    {% if i + 1 == page.page %}
+    {% for i in range(page.pages) %} {% if i + 1 == page.page %}
     <li class="page-item active"><span class="page-link">{{ i + 1 }}</span></li>
     {% else %}
-    <li class="page-item"><a href="#" class="page-link">{{ i + 1 }}</a></li>
-    {% endif %}
-    {% endfor %}
     <li class="page-item">
-      <a class="page-link {% if not page.has_next %}disabled{% endif %}" href="#" aria-label="Next">
+      <a
+        href="/pages{{ url_for('casal.index', page=i+1, per_page=10) }}"
+        class="page-link"
+        data-link
+        >{{ i + 1 }}</a
+      >
+    </li>
+    {% endif %} {% endfor %}
+    <li class="page-item">
+      {% if page.has_next %}
+      <a
+        class="page-link"
+        href="/pages{{ url_for('casal.index', page=page.page+1, per_page=10)}}"
+        aria-label="Next"
+        data-link
+      >
         <span aria-hidden="true">&raquo;</span>
       </a>
+      {% else %}
+      <a class="page-link disabled" href="#" aria-label="Next">
+        <span aria-hidden="true">&raquo;</span>
+      </a>
+      {% endif %}
     </li>
   </ul>
 </nav>
