Alterações para inclusão de banco de dados nas funcionalidades existentes.

--- a/app/templates/casal/register.html
+++ b/app/templates/casal/register.html
@@ -4,10 +4,10 @@
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="#">Home</a></li>
       <li class="breadcrumb-item active" aria-current="page">
-        <a href="/pages{{ url_for('encontro.index')}}" data-link>Encontros</a>
+        <a href="/pages{{ url_for('movimento.index')}}" data-link>Movimentos</a>
       </li>
       <li class="breadcrumb-item active" aria-current="page">
-        Cadastro de Encontro
+        Cadastro de Movimento
       </li>
     </ol>
   </nav>
