--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -22,3 +22,17 @@
 .sidebar li a {
     color: #eee;
 }
+
+.data-not-found {
+    background: url('/static/img/nodatafound.png');
+    height: 437px;
+    width: 840px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.data-not-found h1 {
+    font-size: 2rem;
+    text-align: center;
+}
