--- a/app/templates/components/sidebar.html
+++ b/app/templates/components/sidebar.html
@@ -13,10 +13,10 @@
     </li>
     <li class="py-2">
       <a
-        href="/pages{{ url_for('encontro.index') }}"
+        href="/pages{{ url_for('movimento.index') }}"
         class="text-decoration-none px-3 py-2 d-block"
         data-link
-        ><i class="fas fa-users fa-lg"></i> Encontros</a
+        ><i class="fas fa-users fa-lg"></i> Movimentos</a
       >
     </li>
     <li class="py-2">
