--- a/app/templates/movimento/index.html
+++ b/app/templates/movimento/index.html
@@ -50,7 +50,7 @@
         </a>
         <a
           class="btn btn-sm icon-link icon-link-hover"
-          href="/pages{{ url_for('movimento.events', _id=movimento.id) }}"
+          href="/pages{{ url_for('movimento.encontros', _id=movimento.id) }}"
           data-link
         >
           <i class="fa-solid fa-person-praying"></i>
