--- a/app/templates/movimento/register.html
+++ b/app/templates/movimento/register.html
@@ -14,7 +14,7 @@
 </div>
 <hr />
 <form
-  action="{% if form.id.data %}{{ url_for('movimento.edit', id=form.id.data) }}{% else %}{{ url_for('encontro.register') }}{% endif %}"
+  action="{% if form.id.data %}{{ url_for('movimento.edit', id=form.id.data) }}{% else %}{{ url_for('movimento.register') }}{% endif %}"
   target="/pages{{ url_for('movimento.index') }}"
   method="post"
   novalidate
