--- a/app/templates/movimento/encontro.html
+++ b/app/templates/movimento/encontro.html
@@ -45,10 +45,11 @@
         >
           <i class="fas fa-pen"></i>
         </a>
-        <a class="btn btn-sm icon-link icon-link-hover" data-link>
-          <i class="fas fa-people-group"></i>
-        </a>
-        <a class="btn btn-sm icon-link icon-link-hover" data-link>
+        <a 
+          class="btn btn-sm icon-link icon-link-hover"
+          href="/pages{{ url_for('movimento.circulos', id_movimento=movimento.id, id_encontro=encontro.id) }}" 
+          data-link
+        >
           <i class="fa-solid fa-group-arrows-rotate"></i>
         </a>
       </td>
